Dig Dug part 3; 1

--- a/game/index.html
+++ b/game/index.html
@@ -7,40 +7,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/styles.css">
         <title>Dig Dug</title>
-        <style>
-            main {
-                font-family: Arial, sans-serif;
-            }
-            body {
-                background-color:black;
-            }
-            h1 {
-                font-family: "Rubik Bubbles";
-                color:red;
-                border-bottom: 1px solid blue;
-                }
-            h2 {
-                color:teal;
-                margin-left: 80px;
-            }
-            p, ul {
-                color:white;
-                margin-left: 100px;
-            }
-            blockquote { 
-                background-color: lightgray;
-                padding: 1rem;
-                }
-            img.side {
-                float: right;
-                margin: 0 12px;
-            }
-        </style>
     </head>
     <body>
         <header>
-            <img src="images/dig-dug.svg" alt="Dig Dug logo" width="1280">
+            <img src="images/dig-dug.svg" alt="Dig Dug logo">
             <h1>Dig Dug</h1>
         </header>
 
