Dig Dug part 3; 2-3

--- a/game/big/pic1.html
+++ b/game/big/pic1.html
@@ -7,8 +7,10 @@
     <title>Big Dug</title>
 </head>
 <body>
-    <img src="../images/dig-dug_steam_1920x1080.jpg" alt="Dig Dug Steam page screenshot"><br>
-    <a href="../index.html">Return to home page.</a><br>
-    <a href="../index.html#infoSource">Return to Source section of home page.</a>
+    <main>
+        <img src="../images/dig-dug_steam_1920x1080.jpg" alt="Dig Dug Steam page screenshot"><br>
+        <a href="../index.html">Return to home page.</a><br>
+        <a href="../index.html#infoSource">Return to Source section of home page.</a>
+    </main>
 </body>
 </html>
