--- a/game/index.html
+++ b/game/index.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <header>
-            <img src="images/dig-dug.svg" alt="Dig Dug logo">
+            <img class="title" src="images/dig-dug.svg" alt="Dig Dug logo">
             <h1>Dig Dug</h1>
         </header>
-
+        <br>
         <main>
             <p>
                 <img src="images/dig-dug-burnt.png" alt="Dig Dug Screenshot">
@@ -60,13 +60,13 @@
                 -- https://www.mobygames.com/mobyrank/source/sourceId,540/
             </blockquote>
         </main>
-
+        <br>
         <footer>
             <h2 id="infoSource">Source</h2>
     
             <hr>
     
-            <a href="https://www.mobygames.com/game/arcade/dig-dug" target="_blank">Open Dig Dug page on Moby Games website</a>
+            <p><a href="https://www.mobygames.com/game/arcade/dig-dug" target="_blank">Open Dig Dug page on Moby Games website</a></p>
         </footer>
     </body>
 </html>
