--- a/index.html
+++ b/index.html
@@ -19,22 +19,10 @@
         <h2>Hey, I'm</h2>
         <h2 id="name">Jeremy K.</h2>
         <p>
-            words words words words words words
-            words words words words words words
-            words words words words words words 
-            words words words words words words
-            words words words words words words
-            words words words words words words
-            words words words words words words 
-            words words words words words words
-            words words words words words words
-            words words words words words words
-            words words words words words words 
-            words words words words words words
-            words words words words words words
-            words words words words words words
-            words words words words words words 
-            words words words words words words
+            I'm a sophomore Game Design and Development student at RIT. I love all aspects of making games,
+            specializing in game design and level design. I also enjoy creating pixel art in my free time.
+            During my time at RIT, I hope to continue to develop my skills and prepare myself for a full-time
+            career in the games industry. Thanks for visiting my page!
         </p>
     </main>
     <div class="divider"></div>
@@ -42,19 +30,19 @@
         <h2>- My 235 Projects -</h2>
         <section class="boxlist">
             <div class="box">
-                <p>project 1</p>
+                <p>Project 1</p>
             </div>
             <div class="box">
-                <p>project 1</p>
+                <p>Project 2</p>
             </div>
             <div class="box">
-                <p>project 1</p>
+                <p>Project 3</p>
             </div>
         </section>
         <h2>- Additional Links -</h2>
         <section class="boxlist">
             <div class="box">
-                <p>235 GitHub</p>
+                <p><a href="https://github.com/jeremykdev11/235" target="_blank">235 GitHub</a></p>
             </div>
             <div class="box">
                 <p><a href="https://jeremykdev.itch.io/" target="_blank">itch.io</a></p>
