Finished tetris grid

--- a/tetris-grid/tetris-grid.html
+++ b/tetris-grid/tetris-grid.html
@@ -24,7 +24,12 @@
             <p>Info about this page. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et quia laboriosam similique praesentium rem ipsum omnis eius dicta dolorem magnam odit vel, esse autem culpa commodi inventore magni totam tempore eos quo cum sit? In ab ut sequi. Repudiandae explicabo facere quos tempore iusto cum, harum voluptatibus aspernatur earum aut, autem vel consequatur illum? Voluptatibus explicabo iste modi voluptatem quod suscipit laborum id exercitationem, itaque eius temporibus, soluta dicta illum totam omnis iusto? Ratione at repellat nihil, ipsum totam aut assumenda enim delectus aspernatur culpa quidem officiis alias cum officia libero nam porro consequatur rerum architecto, laudantium repudiandae consectetur?</p>
         </section>
         <ul class="menu">
-            <li><a href="http://tetris.com">Official Site</a></li>
+            <li class="submenu"><a href="http://tetris.com">Official Site</a>
+            <ul class="menu">
+                <li><a href="http://google.com">Link 1</a></li>
+                <li><a href="http://google.com">Link 2</a></li>
+                <li><a href="http://google.com">Link 3</a></li>
+            </ul></li>
             <li><a href="https://en.wikipedia.org/wiki/Tetris">Wikipedia</a></li>
             <li><a href="https://thectwc.com">Championships</a></li>
         </ul>
