--- a/css_frameworks_demo/materialize-carousel.html
+++ b/css_frameworks_demo/materialize-carousel.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="carousel"></div>
+    <div class="carousel">
         <a class="carousel-item" href="#"><img src="https://via.placeholder.com/500x300/0000FF/808080?text=Slide1"></a>
         <a class="carousel-item" href="#"><img src="https://via.placeholder.com/500x300/00AAFF/808080?text=Slide2"></a>
         <a class="carousel-item" href="#"><img src="https://via.placeholder.com/500x300/00FFAA/000000?text=Slide3"></a>
