--- a/project1/spec.html
+++ b/project1/spec.html
@@ -26,13 +26,12 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <img src="media/placeholder.png">
-        </div>
+        <img id="logo" src="media/mario_vs_dk.webp">
+        <img id="header_image" src="media/gameplay_1.webp">
         <p>©2004 Nintendo.</p>
         <h1>Gaming's original rivalry reignites as Mario and Donkey Kong face off in NST's addictive puzzle-platformer for GBA.</h1>
         <div class="rating">
-            <img src="media/placeholder.png">
+            <img src="media/esrb_everyone.svg">
             <p>Mild Cartoon Violence</p>
         </div>
     </header>
@@ -43,29 +42,29 @@
             <h4>Recovering Your Inventory</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium accusantium magnam inventore ad vel consequatur veniam vitae, sequi nostrum fuga voluptates nesciunt quas quasi excepturi ratione maiores itaque quia recusandae.</p>
             <div class="image_grid">
                 <div id="side_image">
-                    <img src="media/placeholder.png">
+                    <img src="media/mario.webp">
                 </div>
                 <div id="subheading">
                     <h4>Bonus Levels</h4>
                 </div>
                 <div class="image_list" id="images">
                     <div class="container">
-                        <img src="media/placeholder.png">
+                        <img src="media/gameplay_2.png">
                     </div>
                     <div class="container">
-                        <img src="media/placeholder.png">
+                        <img src="media/gameplay_2.png">
                     </div>
                 </div>
                 <div id="subtext">
@@ -79,10 +78,10 @@
             <h4>Hammer Time</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
@@ -91,10 +90,10 @@
             <h4>Jumpman</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
@@ -103,10 +102,10 @@
             <h4>Fight with Your Feet</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
-                    <img src="media/placeholder.png">
+                    <img src="media/gameplay_2.png">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
@@ -116,6 +115,7 @@
     </main>
     <footer>
         <p>86 | GAME BOY ADVANCE | MARIO VS. DONKEY KONG</p>
+        <p id="link">nintendopower.com</p>
     </footer>
 </body>
 </html>
