Added alt text to images

--- a/project1/spec.html
+++ b/project1/spec.html
@@ -26,12 +26,12 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="media/mario_vs_dk.webp">
-        <img id="header_image" src="media/gameplay_1.webp">
+        <img id="logo" src="media/mario_vs_dk.webp" alt="Mario vs. Donkey Kong logo">
+        <img id="header_image" src="media/gameplay_1.webp" alt="Mario vs. Donkey Kong Gameplay">
         <p>©2004 Nintendo.</p>
         <h1>Gaming's original rivalry reignites as Mario and Donkey Kong face off in NST's addictive puzzle-platformer for GBA.</h1>
         <div class="rating">
-            <img src="media/esrb_everyone.svg">
+            <img src="media/esrb_everyone.svg" alt="ESRB Everyone rating">
             <p>Mild Cartoon Violence</p>
         </div>
     </header>
@@ -42,29 +42,29 @@
             <h4>Recovering Your Inventory</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium accusantium magnam inventore ad vel consequatur veniam vitae, sequi nostrum fuga voluptates nesciunt quas quasi excepturi ratione maiores itaque quia recusandae.</p>
             <div class="image_grid">
                 <div id="side_image">
-                    <img src="media/mario.webp">
+                    <img src="media/mario.webp" alt="Mario holding a key">
                 </div>
                 <div id="subheading">
                     <h4>Bonus Levels</h4>
                 </div>
                 <div class="image_list" id="images">
                     <div class="container">
-                        <img src="media/gameplay_2.png">
+                        <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                     </div>
                     <div class="container">
-                        <img src="media/gameplay_2.png">
+                        <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                     </div>
                 </div>
                 <div id="subtext">
@@ -78,10 +78,10 @@
             <h4>Hammer Time</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
@@ -90,10 +90,10 @@
             <h4>Jumpman</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
@@ -102,10 +102,10 @@
             <h4>Fight with Your Feet</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png">
+                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
                 </div>
                 <div class="container">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
