--- a/project1/index.html
+++ b/project1/index.html
@@ -26,13 +26,15 @@
 </head>
 <body>
     <header>
-        <img id="header_image" src="media/gameplay_1.webp" alt="Mario vs. Donkey Kong Gameplay">
-        <p>©2004 Nintendo.</p>
-        <h1>Gaming's original rivalry reignites as Mario and Donkey Kong face off in NST's addictive puzzle-platformer for GBA.</h1>
-        <div class="rating">
-            <img src="media/esrb_everyone.svg" alt="ESRB Everyone rating">
-            <p>Mild Cartoon Violence</p>
+        <div id="header_side">
+            <img id="header_image" src="media/gameplay_1.webp" alt="Mario vs. Donkey Kong Gameplay">
+            <p>©2004 Nintendo.</p>
+            <div class="rating">
+                <img src="media/esrb_everyone.svg" alt="ESRB Everyone rating">
+                <p>Mild Cartoon Violence</p>
+            </div>
         </div>
+        <h1>Gaming's original rivalry reignites as Mario and Donkey Kong face off in NST's addictive puzzle-platformer for GBA.</h1>
     </header>
     <main>
         <section class="main_box" id="article">
