--- a/project1/index.html
+++ b/project1/index.html
@@ -27,8 +27,8 @@
 <body>
     <header>
         <div id="header_side">
-            <img id="header_image" src="media/gameplay_1.webp" alt="Mario vs. Donkey Kong Gameplay">
-            <p>©2004 Nintendo.</p>
+            <img id="header_image" src="media/tt_screenshot_1.png" alt="Mario vs. Donkey Kong Gameplay">
+            <p>©2024 DPMOTS.</p>
             <div class="rating">
                 <img src="media/esrb_everyone.svg" alt="ESRB Everyone rating">
                 <p>Mild Cartoon Violence</p>
@@ -115,8 +115,8 @@
         </section>
     </main>
     <footer>
-        <p>86 | GAME BOY ADVANCE | MARIO VS. DONKEY KONG</p>
-        <p id="link">nintendopower.com</p>
+        <p>106 | ITCH.IO | TOPPING TUMBLE</p>
+        <p id="link">jeremykdev.itch.io</p>
     </footer>
 </body>
 </html>
