--- a/project1/doc.html
+++ b/project1/doc.html
@@ -18,7 +18,12 @@
     <p><a href="https://www.mariowiki.com/Gallery:Mario_vs._Donkey_Kong">Other Images Source</a></p>
     <h1>Layout Sketch (Desktop):</h1>
     <img src="media/sketch_desktop.png">
+    <h1>Layout Sketch (Mobile)</h1>
+    <img src="media/sketch_mobile.png">
     <h1>Site Goal:</h1>
     <p>The goal of this site is to provide information about my game "Topping Tumble" while invoking a sense of nostalgia by recreating the feel of a Nintendo Power magazine. This site informs players about the design of the game and provides additional insight with a personal touch.</p>
+    <h1>Phase 2 Changes</h1>
+    <p>The biggest challenge when working on phase 2 of the project has been making sure all elements of the site are responsive. Sometimes, elements don't respond to change in screen width the way you expect them to, so experimenting and adjusting elements at all widths is a struggle at times.</p>
+    <p>Replacing all of the art and screenshots has also required a lot of effort. The site layout I picked contains 12 unique game screenshots, so I had to play through my game and get 12 screenshots of my own.</p>
 </body>
 </html>
