--- a/project1/index.html
+++ b/project1/index.html
@@ -27,96 +27,95 @@
 <body>
     <header>
         <div id="header_side">
-            <img id="header_image" src="media/tt_screenshot_1.png" alt="Mario vs. Donkey Kong Gameplay">
+            <img id="header_image" src="media/tt_screenshot_1.png" alt="Topping Tumble gameplay">
             <p>©2024 DPMOTS.</p>
             <div class="rating">
                 <img src="media/esrb_everyone.svg" alt="ESRB Everyone rating">
                 <p>Mild Cartoon Violence</p>
             </div>
         </div>
-        <h1>Gaming's original rivalry reignites as Mario and Donkey Kong face off in NST's addictive puzzle-platformer for GBA.</h1>
+        <h1>Build a course to guide pizza toppings with a mind of their own in DPMOTS's addictive puzzle-platformer on itch.io.</h1>
     </header>
     <main>
         <section class="main_box" id="article">
-            <h2>MONKEY BUSINESS</h2>
-            <p class="style_serif">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, sapiente voluptates explicabo repudiandae iure natus molestiae voluptate quas ad hic nobis iusto id ab quam minus. Pariatur hic nisi deserunt.</p>
-            <h4>Recovering Your Inventory</h4>
+            <h2>PIZZA PARTY</h2>
+            <p class="style_serif">Cooking a pizza in this kitchen won't be easy. The motto of this pizzeria is literally "you can't make me"! These pizza toppings will wander wherever they want, so it's your job to get them from fridge to oven. Luckily, you'll have a variety of tools at your disposal, and a new puzzle to explore in every level! </p>
+            <h4>Friends or Food?</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_food_1.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_food_2.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_food_3.png" alt="Topping Tumble gameplay">
                 </div>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium accusantium magnam inventore ad vel consequatur veniam vitae, sequi nostrum fuga voluptates nesciunt quas quasi excepturi ratione maiores itaque quia recusandae.</p>
+            <p>This game features seven (adorable!) pizza topping characters. Tomato, Cheese, Sausage, Pepperoni, Mushroom, Pineapple, and Anchovy are all here! The toppings you get for your pizza are random every time you hit play on a level. You may get perfectly balanced pizza ingredients, or you might get nothing but anchovies.</p>
             <div class="image_grid">
-                <div id="side_image">
-                    <img src="media/mario.webp" alt="Mario holding a key">
-                </div>
+                <div id="side_image"></div>
                 <div id="subheading">
-                    <h4>Bonus Levels</h4>
+                    <h4>Salt Shakers</h4>
                 </div>
                 <div class="image_list" id="images">
                     <div class="container">
-                        <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                        <img src="media/tt_salt_1.png" alt="Topping Tumble gameplay">
                     </div>
                     <div class="container">
-                        <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                        <img src="media/tt_salt_2.png" alt="Topping Tumble victory screen">
                     </div>
                 </div>
                 <div id="subtext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias itaque iste quam, ea sed aut repellat vitae facilis officiis esse fuga modi. Voluptatibus iste praesentium debitis cumque odit ex odio.</p>
+                    <p>Once you defeat all thirteen levels, you can also collect the six salt shakers as an additional challenge! While there is no reward for collecting all of them, you can still show off to your friends how great you are.</p>
                 </div>
             </div>
         </section>
         <section class="main_box" id="tips">
             <h3>TIPS FROM THE DEVELOPERS</h3>
-            <p class="style_serif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea sit exercitationem, ipsum est aliquid, sint possimus minima nesciunt temporibus repudiandae consequuntur deleniti reiciendis. Rem ipsa nostrum aliquid totam iste.</p>
-            <h4>Hammer Time</h4>
+            <p class="style_serif">Where better to go for advice on a game than straight to the developers? We solicited gameplay hints from Jeremy Kotz, game designer at Don't Put Me On The Spot (the team behind Topping Tumble).</p>
+            <h4>Coins</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_coin_1.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_coin_2.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
+                    <p>One of the most important things to master in this game is your currency. Every level you'll have only a limited amount of coins to spend on tiles in the shop. Some kinds of tiles cost more than others, so make sure to consider when it's worth spending a little extra.</p>
                 </div>
             </div>
-            <h4>Jumpman</h4>
+            <h4>Spring into Action</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_spring_1.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_spring_2.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
+                    <p>The first unique tile you'll add to your arsenal is the spring. It'll help you get to all sorts of high-up places you couldn't reach before. It can't be placed anywhere, so try using it in tandem with your regular tiles!</p>
                 </div>
             </div>
-            <h4>Fight with Your Feet</h4>
+            <h4>Do a Flip!</h4>
             <div class="image_list">
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_flip_1.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <img src="media/gameplay_2.png" alt="Mario vs. Donkey Kong Gameplay">
+                    <img src="media/tt_flip_2.png" alt="Topping Tumble gameplay">
                 </div>
                 <div class="container">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ea omnis! Corporis earum nihil mollitia animi molestiae. Ab ipsum earum neque laudantium officiis. Quibusdam iste vero reprehenderit beatae blanditiis consequuntur!</p>
+                    <p>What goes up, might stay up? Flipping gravity leads to a whole new set of challenges in some levels. Remember to use every tile to its full advantage, as some might be useful even when you're walking on the ceiling.</p>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <p>106 | ITCH.IO | TOPPING TUMBLE</p>
-        <p id="link">jeremykdev.itch.io</p>
+        <p id="return"><a href="#header_side">Return to Top</a></p>
+        <p id="link"><a href="https://jeremykdev.itch.io/">jeremykdev.itch.io</a></p>
     </footer>
 </body>
 </html>
