--- a/random-phrases/random-phrases.html
+++ b/random-phrases/random-phrases.html
@@ -36,6 +36,7 @@
         function init()
         {
             document.querySelector("#quote-button").onclick = displayNewSplash;
+            displayNewSplash();
         }
 
     </script>
