--- a/gif-finder/gif-finder.html
+++ b/gif-finder/gif-finder.html
@@ -143,7 +143,79 @@
         // 11 - see what the URL looks like
         console.log(url);
 		
+        // 12 - Request data!
+        getData(url);
 	}
+
+    function getData(url){
+        // 1 -create a new XHR object
+        let xhr = new XMLHttpRequest();
+
+        // 2- set the onload handler
+        xhr.onload = dataLoaded;
+
+        // 3 - set the onerror handler
+        xhr.onerror = dataError;
+
+        // 4 - open connection and send the request
+        xhr.open("GET", url);
+        xhr.send();
+    }
+
+    // Callback Functions
+
+    function dataLoaded(e){
+        // 5 - event.target is the xhr object
+        let xhr = e.target;
+
+        // 6 - xhr.responseText is the JSON file we just downloaded
+        console.log(xhr.responseText);
+
+        // 7 - turn the text into a parsable JavaScript object
+        let obj = JSON.parse(xhr.responseText);
+
+        // 8 - if there are no results, print a message and return
+        if (!obj.data || obj.data.length == 0){
+            document.querySelector("#status").innerHTML = "<b>NO reuslts found for '" + displayTerm + "'</b>";
+            return; // Bail out
+        }
+
+        // 9 - Start building an HTML string we will display to the user
+        let results = obj.data;
+        console.log("results.length = " + results.length);
+        let bigString = "<p><i>Here are " + results.length + " reuslts for '" + displayTerm + "'</i></p>";
+        
+        // 10 - loop through the array of reuslts
+        for (let result of results)
+        {
+            // 11 - get the URL to the GIF
+            let smallURL = results.images.fixed_width_small.url;
+            if (!smallURL) smallURL = "images/no-image-found.png";
+
+            // 12 - get the URL too the GIPHY Page
+            let url = result.url;
+
+            // 13 - Build a <div> to hold each result
+            let line = `<div class='result'><img src='${smallURL}' title='${result.id}' />`;
+            line += `<span><a target='_blank' href='${url}'>View on Giphy</a></span></div>`;
+
+            // 14 another way of doing the same thing above
+            // (look at homework page)
+
+            // 15 - add the <div> to the 'bigString' and loop
+            bigString += line;
+        }
+
+        // 16 - all done building the HTML - show it to the user!
+        document.querySelector("#content").innerHTML = bigString;
+
+        // 17 - update the status
+        document.querySelector("#status").innerHTML = "<b>Success!</b>";
+    }
+
+    function dataError(e){
+        console.log("An error occurred!");
+    }
 	
   </script>
 
