--- a/gif-finder/gif-finder.html
+++ b/gif-finder/gif-finder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8">
  	<title>Giphy Finder</title>
 	<link rel="stylesheet" href="styles/main.css">
   	<script src="js/main.js"></script>
@@ -13,7 +13,7 @@
 
 <div class="widgets">
 	Search Term -> 
-	<input id="searchterm" type="text" size="20" maxlength="20" autofocus value="cats"/>
+	<input id="searchterm" type="text" size="20" maxlength="20" autofocus value="cats">
 </div>
 
 <div class="widgets">
@@ -28,7 +28,7 @@
 </div>
 
 <div class="widgets">
-	<button type="button" id="search" class="green">Find some GIFs!<br/>:-)</button>
+	<button type="button" id="search" class="green">Find some GIFs!<br>:-)</button>
 </div>
 <div id="status">Ready to Search!</div>
 <hr>
