--- a/project2/concept.html
+++ b/project2/concept.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/main.js"></script>
+    <script src="js/concept.js"></script>
 </head>
 <body>
     <header>
