--- a/project2/doc.html
+++ b/project2/doc.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentation</title>
+    <style>
+        #content {
+            max-width: 800px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="content">
+        <h1>Project Proposal</h1>
+        <p>I'm planning to create a tool for searching and sorting the latest sales on Steam. This will help Steam users get the best deals on games.</p>
+        <p>This will be accomplished using the <a href="https://apidocs.cheapshark.com/">CheapShark API</a>.</p>
+        <a href="concept.html">Proof-of-concept</a>
+    </div>
 </body>
 </html>
