Search results table

--- a/project2/index.html
+++ b/project2/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js"></script>
 </head>
 <body>
     <header>
-
+        <div id="headerContent">
+            <h1>Steam Sale Search Site</h1>
+        </div>
     </header>
     <main>
-        <div id="content"></div>
+        <div id="mainContent">
+            <div id="search">
+                <div class="searchItem">one</div>
+                <div class="searchItem">two</div>
+                <div class="searchItem">three</div>
+            </div>
+            <table id="results">
+                <tr>
+                    <th></th>
+                    <th id="fill">Title</th>
+                    <th>% Off</th>
+                    <th>Price</th>
+                    <th>User Rating</th>
+                    <th>Release Date</th>
+                </tr>
+            </table>
+        </div>
     </main>
     <footer>
         
