User searching and filtering

--- a/project2/doc.html
+++ b/project2/doc.html
@@ -16,6 +16,10 @@
         <p>I'm planning to create a tool for searching and sorting the latest sales on Steam. This will help Steam users get the best deals on games.</p>
         <p>This will be accomplished using the <a href="https://apidocs.cheapshark.com/">CheapShark API</a>.</p>
         <a href="concept.html">Proof-of-concept</a>
+        <h1>Project Prototype</h1>
+        <p>I have a working prototype of the project. The project has full functionality for calling the CheapShark API using controls to filter the results, and displaying the proper search results to the user.</p>
+        <p>I am using <a href="https://fontawesome.com/">fontawesome.com</a> for the search icon and any other icons I may need.</p>
+        <p>I am looking for feedback on the layout of the page. Ignoring the style (colors, font, etc.), I am seeking feedback and initial impressions on the layout to ensure nothing is confusing about the site's functionality.</p>
     </div>
 </body>
 </html>
