--- a/project2/index.html
+++ b/project2/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <script src="js/main.js"></script>
 </head>
 <body>
     <header>
-        <div id="headerContent">
+        <div id="headerWrapper">
             <h1>Steam Sale Search Site</h1>
         </div>
     </header>
     <main>
-        <div id="mainContent">
+        <div id="mainWrapper">
             <div id="search">
                 <div class="searchItem">
                     <div class="searchTextbox">
@@ -51,7 +54,11 @@
                     </div>
                 </div>
             </div>
-            <table id="results"></table>
+            <table id="results">
+                <caption>
+                    Searching...
+                </caption>
+            </table>
         </div>
     </main>
     <footer>
