css style changes

--- a/project2/index.html
+++ b/project2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -23,7 +23,7 @@
             <div id="search">
                 <div class="searchItem">
                     <div class="searchTextbox">
-                        <input id="searchInput" type="text" placeholder="Search Games">
+                        <input id="searchInput" type="text" placeholder="Search Games...">
                         <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </div>
                 </div>
