--- a/project2/index.html
+++ b/project2/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="headerWrapper">
-            <h1>Steam Sale Search Site</h1>
+            <h1>STEAM SALE SEARCH SITE</h1>
         </div>
     </header>
     <main>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="searchItem">
                     <div class="searchDropdown">
-                        <p>MINIMUM RATING</p>
+                        <p>MINIMUM METACRITIC RATING</p>
                         <select id="searchSelectRating">
                             <option value="">none</option>
                             <option value="25">25%</option>
